Added keycloak and Spring security config.